--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,7 +98,7 @@ header {
 
 .pricing {
   background-color: #f7f7f8;
-  height: 20rem; }
+  height: 23rem; }
   @media screen and (max-width: 768px) {
     .pricing {
       margin-bottom: 1rem; } }
@@ -108,9 +108,16 @@ header {
   .pricing .pricing__fee h2 {
     font-weight: bold;
     font-size: 1.5rem; }
+  .pricing .pricing__fee .pricing__discount {
+    font-size: .8rem;
+    color: #CD6133; }
   .pricing .pricing__getstarted-button .btn--get-started {
     background-color: #CD6133;
     color: white; }
+  .pricing .pricing__getstarted-button .pricing__amount-to-pay {
+    font-size: .8rem;
+    color: #97979b;
+    margin-top: .7rem; }
   .pricing .plan-features {
     color: #7d7d82;
     font-size: .8rem; }
