--- a/public/css/error.css
+++ b/public/css/error.css
@@ -1,20 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-body,html{
-    height:100vh;
-}
-body{
-    height: 100vh;
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  .navbar .logo {
-    margin-top: -25px !important;
-  }
   .Mycontainer{
-   /*flex:1;*/
-  margin:auto; 
-   min-height:100vh;
- 
+ margin-top: 7rem;
   }
 
 
@@ -81,60 +66,7 @@ body{
 
 
 @media (max-width:986px) {
-    /* navbar */
-    .navbar{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    }
-    .navbar .logo {
-      margin-top: 0px !important;
-    }
-  .nav-links .fa-bars{
-    display: block;
-  }
-  .nav-links ul li {
-    display:block;
-    width: 100%;
-    padding: 10px 0px !important;
-  }
-  .nav-links ul li:hover{
-    background: #636e72;
-    cursor: pointer;
-    border-left: 4px solid #DA0353;
-  }
-  .nav-links ul li:hover a{
-    transition: .5s;
-    padding-left: 40px;
-    color: #DA0353;
-    border:none;
-    font-weight: bold
-  }
-  .navbar .nav-links ul li a:hover{
-    border:none !important;
-    color: #DA0353;
-    background: none !important;
-  }
-  .nav-links ul{
-    padding-left: 0px !important;
-    position: absolute;
-    left: 0;
-    top: 80px;
-    width: 100%;
-    height: 100vh;
-    background: #000;
-    z-index: 20;
-    margin-top: -20px;
-    transition: all 1s ease-out;
-    text-align: center;
-    clip-path:circle(100px at 90% -40%);
-    pointer-events:none;
-  }
-  .fade-nav{
-    transition: all 2s ease-out;
-    clip-path:circle(1500px at 90% -40%) !important;
-    pointer-events:all !important;
-  }
+
 
   .error-content{
       width: 600px;
@@ -216,8 +148,5 @@ body{
         padding-top: 0px;
         margin-top:50px;
     }
-    .footer {
-    height: 120px !important;
-    line-height: 10px;
-}
+ 
   }
